# xgen-ontokit

./: .gitignore  IMPROVEMENT_ROADMAP.md  README.en.md  README.md  pyproject.toml
eval/class_termhood/: build_gold.py
eval/class_termhood/data/: gold.json
eval/entity_resolution/: DESIGN.md  JUDGE_PROTOCOL.md  README.md  baselines.py  build_gold.py  er_dict.py  er_embed.py  er_kb_link.py  er_urimalsam.py  eval_auc.py  eval_er.py  pick_threshold.py  run_dict_eval.py  run_embed_eval.py  run_eval.py  run_final_eval.py
eval/hierarchy/: README.md  build_gold_r0.py  build_gold_r1.py  eval_hierarchy_r0.py  eval_r1.py  eval_r1_v5.py  eval_r1_v6.py  eval_r1_v8.py  fill_leads2.py
eval/hierarchy/data/: gold_r1.json  wd_gold_r0.json
eval/hierarchy/poc/: poc_deppar_relation.py  poc_spmi_v2.py
eval/instance_typing/: README.md  retyped.json
eval/relation/: JUDGE_PROTOCOL.md  MODEL_LOCK.json  README.md  baselines.py  conf_wiring_check.py  conf_wiring_fixture.txt  eval_encoder.py  eval_re.py  extractor_rules.py  fetch_model.py  labels.py  m2_build_v12_fixed.py  m2_eval_aug.py  m2_prep_sredfm.py  m2_train_aug.py  prep_data.py  rel3_diag.py  run_eval.py  sg1_wiring_check.py  sg1_wiring_fixture.json  train_encoder.py  v13_gate1.py  v13_train.py  v14_build_set.py  v14_frozen_dev.py  v14_gate1.py  v14_tune_eval.py  v15_gate1.py
examples/: xgen_injection.py
src/ontokit/: __init__.py  citations.py  cooccurrence.py  protocols.py
src/ontokit/builder/: ontology_builder.py
tests/: test_occupation_adjdoc.py  test_relation_gates.py  test_smoke.py  test_span_gate.py
(+29 files in other folders)
